Fix ProcessorMetaSupplier's for isolated jobs [CORE-54] [CORE-66] (#1323)
This PR
1. fixes the sources and sinks that are incompatible with isolated jobs. It was understood that the root cause of this incompatibility is that some ProcessorMetaSupplier's obtain execution participants through `Cluster#getMembers()` instead of `Context#partitionAssignment()`. This problem actually existed from the beginning for clusters containing lite members since `Cluster#getMembers()` also returns lite members, which were not assigned any partitions before #1296. Making the partition assignment more fair didn't fix these PMSs since `Context#partitionAssignment()` is not the same as `Partition#getOwner()`. With the introduction of member pruning in 5.4, the problem started to affect clusters not containing lite members as well. Since it is an SQL-specific feature, only the processors used by SQL were fixed. The remaining ones are fixed here, which are local IMap/ICache journals and Hadoop/Elasticsearch/Kinesis connectors.

2. fixes `ElasticSourcePMetaSupplier#assignShards`. The number of iterations computed in this method used to be incorrect if the replica distribution is skewed as a result of shard allocation filtering[1]. This problem is exemplified by `CoLocatedClusterElasticSourcesTest#testIsolatedJob_usingCoLocatedReading_withoutFullRedundancy()`, and fixed by switching from a member-oriented distribution algoritm to a shard-oriented algorithm.

Closes https://hazelcast.atlassian.net/browse/CORE-54
Closes https://hazelcast.atlassian.net/browse/CORE-66

[1]: https://www.elastic.co/guide/en/elasticsearch/reference/7.17/shard-allocation-filtering.html

GitOrigin-RevId: 96749336ca0ddfa726bf577fd618f482f8659b21