@@ -24,12 +24,9 @@ import com.hazelcast.jet.core.AbstractProcessor;
 import com.hazelcast.jet.core.Processor;
 import com.hazelcast.jet.core.ProcessorSupplier;
 import com.hazelcast.jet.core.test.TestSupport;
-import com.hazelcast.spi.impl.NodeEngineImpl;
 import com.hazelcast.sql.impl.expression.ConstantExpression;
 import com.hazelcast.sql.impl.expression.Expression;
 import org.jetbrains.annotations.NotNull;
-import org.junit.Assert;
-import org.junit.Before;
 import org.junit.BeforeClass;
 import org.junit.Test;
 
@@ -37,6 +34,7 @@ import javax.annotation.Nonnull;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
 
@@ -48,25 +46,21 @@ import static com.hazelcast.sql.impl.type.QueryDataType.INT;
 public class LazyDefiningPMSTest extends SimpleTestInClusterSupport {
     private static final int ITERATIONS = 1000;
 
-    private int pKey;
-    private int keyOwnerPartitionId;
-    private Address ownderAddress;
+    /** Address of the master member. */
+    private static Address ownerAddress;
+    /** A partition key owned by the member having {@link #ownerAddress}. */
+    private static int partitionKey;
 
     @BeforeClass
     public static void beforeClass() throws Exception {
         initialize(7, null);
-    }
 
-    @Before
-    public void setUp() throws Exception {
-        NodeEngineImpl nodeEngine = getNodeEngineImpl(instance());
+        ownerAddress = instance().getCluster().getLocalMember().getAddress();
         Map<Address, int[]> partitionAssignment = getPartitionAssignment(instance());
-        ownderAddress = instance().getCluster().getLocalMember().getAddress();
-        for (int i = 1; i < ITERATIONS; ++i) {
-            int pIdCandidate = instance().getPartitionService().getPartition(i).getPartitionId();
-            if (Arrays.binarySearch(partitionAssignment.get(ownderAddress), pIdCandidate) >= 0) {
-                pKey = i;
-                keyOwnerPartitionId = pIdCandidate;
+        for (int i = 1; i < ITERATIONS; i++) {
+            int partitionId = instance().getPartitionService().getPartition(i).getPartitionId();
+            if (Arrays.binarySearch(partitionAssignment.get(ownerAddress), partitionId) >= 0) {
+                partitionKey = i;
                 break;
             }
         }
@@ -80,7 +74,7 @@ public class LazyDefiningPMSTest extends SimpleTestInClusterSupport {
                 1);
 
         JobConfig config = new JobConfig()
-                .setArgument(SQL_ARGUMENTS_KEY_NAME, Arrays.asList(0, pKey, 2));
+                .setArgument(SQL_ARGUMENTS_KEY_NAME, List.of(0, partitionKey, 2));
 
         // When & Then
         TestSupport.verifyProcessor(pmsGen)
@@ -88,9 +82,7 @@ public class LazyDefiningPMSTest extends SimpleTestInClusterSupport {
                 .jobConfig(config)
                 .disableSnapshots()
                 .disableProgressAssertion()
-                .expectExactOutput(out(ownderAddress));
-
-        Assert.assertEquals(keyOwnerPartitionId, pmsGen.partitionId);
+                .expectExactOutput(out(ownerAddress));
     }
 
     @Test
@@ -98,10 +90,10 @@ public class LazyDefiningPMSTest extends SimpleTestInClusterSupport {
         // Given
         LazyDefiningSpecificMemberPms pmsGen = (LazyDefiningSpecificMemberPms) lazyForceTotalParallelismOne(
                 new TestGenPSupplier(),
-                (SupplierEx<Expression<?>>) () -> ConstantExpression.create(pKey, INT));
+                (SupplierEx<Expression<?>>) () -> ConstantExpression.create(partitionKey, INT));
 
         JobConfig config = new JobConfig()
-                .setArgument(SQL_ARGUMENTS_KEY_NAME, Arrays.asList(0, pKey, 2));
+                .setArgument(SQL_ARGUMENTS_KEY_NAME, List.of(0, partitionKey, 2));
 
         // When & Then
         TestSupport.verifyProcessor(pmsGen)
@@ -109,9 +101,7 @@ public class LazyDefiningPMSTest extends SimpleTestInClusterSupport {
                 .jobConfig(config)
                 .disableSnapshots()
                 .disableProgressAssertion()
-                .expectExactOutput(out(ownderAddress));
-
-        Assert.assertEquals(keyOwnerPartitionId, pmsGen.partitionId);
+                .expectExactOutput(out(ownerAddress));
     }
 
     @Test
@@ -119,23 +109,21 @@ public class LazyDefiningPMSTest extends SimpleTestInClusterSupport {
         // Given
         LazyDefiningSpecificMemberPms pmsGen = (LazyDefiningSpecificMemberPms) lazyForceTotalParallelismOne(
                 new TestGenPSupplier(),
-                (SupplierEx<Expression<?>>) () -> ConstantExpression.create(pKey, INT));
+                (SupplierEx<Expression<?>>) () -> ConstantExpression.create(partitionKey, INT));
 
         // When & Then
         TestSupport.verifyProcessor(pmsGen)
                 .hazelcastInstance(instance())
                 .disableSnapshots()
                 .disableProgressAssertion()
-                .expectExactOutput(out(ownderAddress));
-
-        Assert.assertEquals(keyOwnerPartitionId, pmsGen.partitionId);
+                .expectExactOutput(out(ownerAddress));
     }
 
     private static class TestGenPSupplier implements ProcessorSupplier {
         private Address ownderAddress;
 
         @Override
-        public void init(@NotNull ProcessorSupplier.Context context) throws Exception {
+        public void init(@NotNull ProcessorSupplier.Context context) {
             int[] memberPartitions = context.memberPartitions();
             Map<Address, int[]> addressMap = context.partitionAssignment();
             for (Entry<Address, int[]> entry : addressMap.entrySet()) {
